--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,9 +1,9 @@
 github_users:
   - torvalds
   - alshedivat
+  - simonguichandut
 
 github_repos:
-  - george-gca/multi-language-al-folio
   - alshedivat/al-folio
   - twbs/bootstrap
   - jekyll/jekyll
