--- a/_data/en/cv.yml
+++ b/_data/en/cv.yml
@@ -2,18 +2,20 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Simon Guichandut
+    - name: Email
+      value: simonguichandut@gmail.com
     - name: Languages
-      value: English, German
+      value: English, French
+    - name: Summary
+      value: I'm a PhD student studying explosions on neutron stars, using theoretical models and computer simulations. I enjoy translating math into code, and making beautiful data visualizations.
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: McGill University, Montreal, Canada
+      year: Ongoing
       description:
         - Description 1.
         - Description 2.
