--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,7 @@
 "Cumming":
   - firstname: ["Andrew", "A"]
     url: http://www.physics.mcgill.ca/~cumming/
+
+"Zingale":
+  - firstname: ["Michael", "M"]
+    url: https://zingale.github.io/
